--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "baseUrl": "src",
+    "baseUrl": "src", // absolute imports
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -23,7 +23,7 @@
     "noUnusedLocals": true,
     "declaration": true,
     "emitDeclarationOnly": true,
-    "outDir": "build",
+    "outDir": "build"
   },
   "include": [
     "src"
